[package]
name = "cuda_libs_test"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_libs = { path = "..", features = [
    "runtime-link",
    "driver",
    "nvptx",
    "cudart",
    "cublas",
    "cublas_lt",
    "cudnn",
    "cufft",
    "curand",
    "cusolver",
    "cusparse",
] }
num-complex = "0.4.6"
